// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form/> should render with preloaded data 1`] = `
<form
  class=""
>
  <div
    class="InputField required form-group"
    color=""
  >
    <label
      class="control-label"
      for="id-label"
    >
      Button title
    </label>
    <div
      class=""
    >
      <input
        class="form-control"
        id="id-label"
        required=""
        type="text"
        value="label"
      />
    </div>
  </div>
  <div
    class="http"
  >
    <div
      class="formParamRow"
    >
      <div
        class="formParamCol"
      >
        <div
          class="InputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-method"
          >
            Method
          </label>
          <div
            class=""
          >
            <select
              class="form-control"
              id="id-method"
              required=""
            >
              <option
                value="GET"
              >
                GET
              </option>
              <option
                value="POST"
              >
                POST
              </option>
              <option
                value="PUT"
              >
                PUT
              </option>
              <option
                value="DELETE"
              >
                DELETE
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="formParamCol"
      >
        <div
          class="InputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-url"
          >
            URL
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-url"
              pattern="*"
              required=""
              type="text"
              value="www.someurl.com"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3 form-group"
    >
      <label
        class="control-label"
      >
        Headers
      </label>
      <div>
        <button
          class="btn btn-secondary btn-sm"
          type="button"
        >
          <i
            class="material-icons formParamIcon"
          >
            add
          </i>
        </button>
      </div>
    </div>
    <div
      class="mt-3 form-group"
    >
      <label
        class="control-label"
      >
        Parameters
      </label>
      <div>
        <button
          class="btn btn-secondary btn-sm"
          type="button"
        >
          <i
            class="material-icons formParamIcon"
          >
            add
          </i>
        </button>
      </div>
    </div>
  </div>
  <div
    class="mt-4"
  >
    <button
      class="mr-2 btn btn-primary"
      type="submit"
    >
      Save
    </button>
    <button
      class="btn btn-secondary"
      type="button"
    >
      Cancel
    </button>
  </div>
</form>
`;

exports[`<Form/> should render without any data 1`] = `
<form
  class=""
>
  <div
    class="InputField required form-group"
    color=""
  >
    <label
      class="control-label"
      for="id-label"
    >
      Button title
    </label>
    <div
      class=""
    >
      <input
        class="form-control"
        id="id-label"
        required=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="http"
  >
    <div
      class="formParamRow"
    >
      <div
        class="formParamCol"
      >
        <div
          class="InputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-method"
          >
            Method
          </label>
          <div
            class=""
          >
            <select
              class="form-control"
              id="id-method"
              required=""
            >
              <option
                value="GET"
              >
                GET
              </option>
              <option
                value="POST"
              >
                POST
              </option>
              <option
                value="PUT"
              >
                PUT
              </option>
              <option
                value="DELETE"
              >
                DELETE
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="formParamCol"
      >
        <div
          class="InputField required form-group"
          color=""
        >
          <label
            class="control-label"
            for="id-url"
          >
            URL
          </label>
          <div
            class=""
          >
            <input
              class="form-control"
              id="id-url"
              pattern="*"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3 form-group"
    >
      <label
        class="control-label"
      >
        Headers
      </label>
      <div>
        <button
          class="btn btn-secondary btn-sm"
          type="button"
        >
          <i
            class="material-icons formParamIcon"
          >
            add
          </i>
        </button>
      </div>
    </div>
    <div
      class="mt-3 form-group"
    >
      <label
        class="control-label"
      >
        Parameters
      </label>
      <div>
        <button
          class="btn btn-secondary btn-sm"
          type="button"
        >
          <i
            class="material-icons formParamIcon"
          >
            add
          </i>
        </button>
      </div>
    </div>
  </div>
  <div
    class="mt-4"
  >
    <button
      class="mr-2 btn btn-primary"
      type="submit"
    >
      Save
    </button>
    <button
      class="btn btn-secondary"
      type="button"
    >
      Cancel
    </button>
  </div>
</form>
`;
